--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <body>
   <h1>Hari Ghimire</h1>
   <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif"/>
+  <h2>This is heading 2</h2>
 </body>
 
 </html>
